styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@import url("https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap");

html,
body {
  padding: 0;
  margin: 0;
  background-color: #0d1117;
  font-family: "EB Garamond", serif;
  color: #c9d1d9;
}

* {
  box-sizing: border-box;
}

* {
  scrollbar-width: thin;
  scrollbar-color: #000;
}

*::-webkit-scrollbar {
  width: 15px;
}

*::-webkit-scrollbar-track {
  background: #000;
  border-radius: 5px;
}

